--- a/files/projects/index_face.html
+++ b/files/projects/index_face.html
@@ -178,7 +178,7 @@
                     Thanks to FaceScape team for providing us with the <a href="https://arxiv.org/pdf/2003.13989.pdf/">dataset  </a>.
                 </p>
                 <p class="text-justify">
-                    We provide a tool to synthesize face data, which can adjust face id, pose, lighting condition. <a href="https://github.com/txycircle/A-python-tool-to-play-with-3DMM/">[link] </a>.
+                    We provide a tool to synthesize face data, which can adjust face id, pose, lighting condition. <a href="https://github.com/txycircle/A-python-tool-to-play-with-3DMM/">[link] </a>
                 </p>
                 <p class="text-justify">
                     The website template was borrowed from <a href="http://mgharbi.com/">Michaël Gharbi</a>.
